--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -17,6 +17,7 @@ body {
   .title-box {
     text-align: center;
     margin-bottom: 10px;
+    position: relative;
     h1 {
       font-family: "Monoton", sans-serif;
       font-size: 50px;
